# tauri-app

./: .eslintignore  .eslintrc.json  .prettierrc.js  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  splashscreen.html  tailwind.config.ts  tsconfig.app.json  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
.github/工作流/: github-actions-demo.yml
src/: App.vue  Clock.vue  MoveInput.vue  RecordList.vue  XiangqiMap.vue  XiangqiPiece.vue  common.tsx  config.scss  html.d.ts  main.ts  store.ts  useRunChess.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/xiang/: setup.rs  tray.rs
src/components/: control-bar.vue  control.vue  data.tsx  index.ts  number-list.vue  record-list.vue  rivers.vue  title-bar.vue  xiangqi-map.vue  xiangqi-piece.vue
src/components/CircleAnimation/: index.vue
src/components/Clock/: index.vue
src/components/TauriAppsApiLIst/: Type.d.ts  app-api.vue  dialog-api.vue  index.vue  notice.api.vue  os-api.vue  process-api.vue  useAppsApi.ts
src/components/Xiangqi/: Type.d.ts  data.tsx  index.vue
src/components/control/: index.vue
src/components/piece/: active.vue  index.vue
src/store/: index.ts  xiang.ts
src/store/modules/: app.ts  mirror.ts  xiang.ts
src/style/: config.scss
src/utils/: data.ts  index.ts  is.ts  making-chess.ts  read-chess.ts  run-rule-data.ts  run-rule.ts  version.ts
src/views/: Type.d.ts  index.vue
src/vueuse/: event-bus.ts  store.ts
types/: Mirror.d.ts  Type.d.ts  Xiang.d.ts
(+78 files in other folders)
