[package]
name = "tauri-xiang-app"
version = "0.0.1"
description = "A Tauri App"
authors = ["lhf6623"]
license = "MIT"
repository = "https://github.com/lhf6623/tauri-app.git"
default-run = "tauri-xiang-app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "macos-private-api"] }
window-vibrancy = "0.1.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
